--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,9 @@
 
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner" role="listbox">
+
 				    <div class="item active">
+				      <div class="dark-overlay"></div>
 				      <img src="images/slides/3.jpg" alt="...">
 				      <div class="carousel-caption">
 				      	<div class="caption">
@@ -73,6 +75,7 @@
 				      </div>
 				    </div>
 				    <div class="item">
+				      <div class="dark-overlay"></div>
 				      <img src="images/slides/2.jpg" alt="...">
 				      <div class="carousel-caption">
 				      	<div class="caption">
@@ -82,6 +85,7 @@
 				      </div>
 				    </div>
 				    <div class="item">
+				    	<div class="dark-overlay"></div>
 				      <img src="images/slides/1.jpg" alt="...">
 				      <div class="carousel-caption">
 				      	<div class="caption">
@@ -236,9 +240,13 @@
 
 		<script src="libs/jquery/dist/jquery.min.js"></script>
 		<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="libs/flowtype/flowtype.js"></script>
+
 		<script src="libs/skel/dist/skel.min.js"></script>
 		<script src="libs/skel-layers/dist/skel-layers.min.js"></script>
+
+		<script src="libs/wow.js/dist/wow.min.js"></script>
+		<script src="libs/flowtype/flowtype.js"></script>
+		<script src="libs/waypoints/lib/jquery.waypoints.min.js"></script>
 
 		<script src="js/init.js"></script>
 
