--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 
-		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="libs/animate.css/animate.min.css" />
+		<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="libs/simple-line-icons/simple-line-icons.css" />
+		<link rel="stylesheet" href="libs/fakeloader/fakeLoader.css" />
 
 		<link rel="stylesheet/less" type="text/css" href="css/style.less" />
 
@@ -25,8 +27,8 @@
 
 	</head>
 	<body id="top">
+	<div class="fakeLoader" id="fakeLoader"></div>
 
-		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
 				<nav id="nav">
 					<ul>
@@ -37,31 +39,25 @@
 						<li><a href="#grid">О наших предприятиях</a></li>
 						<li><a href="#grid">Фотогалерея</a></li>
 						<li><a href="#grid">Контакты</a></li>
-<!-- 						<li><a href="http://getskel.com" class="button special">Download</a></li> -->
+<!-- 					<li><a href="http://getskel.com" class="button special">Download</a></li> -->
 					</ul>
 				</nav>
 			</header>
 
-		<!-- Banner -->
 			<section id="slider" class="header-top">
 
 				<div class="logo-wrapper">
 					<div class="logo">
-						<div class="logo-image">
+						<div class="logo-image wow fadeInDown" data-wow-duration="1.5s" data-wow-delay="1s">
 							<img src="images/logo.png">
 						</div>
-					<h2>Облпотребсоюз</h2>
+					<h2 class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">Облпотребсоюз</h2>
 					</div>
 				</div>
 				<div id="slider-header" class="carousel slide" data-ride="carousel">
-				  <!-- Indicators -->
-				  <ol class="carousel-indicators">
-				    <li data-target="#slider-header" data-slide-to="0" class="active"></li>
-				    <li data-target="#slider-header" data-slide-to="1"></li>
-				    <li data-target="#slider-header" data-slide-to="2"></li>
-				  </ol>
 
-				  <!-- Wrapper for slides -->
+				  <ol class="carousel-indicators"></ol>
+
 				  <div class="carousel-inner" role="listbox">
 
 				    <div class="item active">
@@ -74,6 +70,7 @@
 				      	</div>
 				      </div>
 				    </div>
+
 				    <div class="item">
 				      <div class="dark-overlay"></div>
 				      <img src="images/slides/2.jpg" alt="...">
@@ -84,19 +81,10 @@
 				      	</div>
 				      </div>
 				    </div>
-				    <div class="item">
-				    	<div class="dark-overlay"></div>
-				      <img src="images/slides/1.jpg" alt="...">
-				      <div class="carousel-caption">
-				      	<div class="caption">
-				      	<b>Большие возможности</b>
-				      	<p>За все годы деятельности потребительская кооперация области сформировалась в широко разветвленную сеть торговых, заготовительных и производственных предприятий.</p>
-				      	</div>
-				      </div>
-				    </div>
+
+
 				  </div>
 
-				  <!-- Controls -->
 				  <a class="left carousel-control" href="#slider-header" role="button" data-slide="prev">
 				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				    <span class="sr-only">Previous</span>
@@ -106,14 +94,6 @@
 				    <span class="sr-only">Next</span>
 				  </a>
 				</div>
-
-<!-- 				<h2>I'm Baseline</h2>
-				<p>A simple starting point for projects based on Skel.</p>
-				<ul class="actions">
-					<li><a href="#content" class="button special">Content</a></li>
-					<li><a href="#elements" class="button">Elements</a></li>
-					<li><a href="#grid" class="button alt">Grid System</a></li>
-				</ul> -->
 			</section>
 
 		<!-- Main -->
@@ -148,26 +128,26 @@
 
 				<hr class="major" />
 
-				<h2>Новости и обьявления</h2>
+				<h2 class="section-title"><i class="icn lite-round icon-bulb"></i> Новости и обьявления</h2>
 
 				<div class="row box-news">
 					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image fit"><img src="images/thumb1.jpg" alt="" /></span>
 						<a href="#">Итоги работы кооператоров за отчетный год</a>
 						<p>5 марта 2015 года на базе Оренбургского потребительского общества состоялось Двадцать восьмое (90-е) общее отчетное собрание представителей потребительских обществ.</p>
 					</section>
 					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image fit"><img src="images/thumb2.jpg" alt="" /></span>
 						<a href="#">Сезон ярмарок стартовал</a>
 						<p>Численность обслуживаемого населения составляет свыше 300 тысяч человек, в том числе сельского 154 тысячи человек. Потребительская кооперация является крупным работодателем на селе: в ней работают более двух тысяч человек.</p>
 					</section>
 					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image fit"><img src="images/thumb3.jpg" alt="" /></span>
 						<a href="#">Cостоялся областной конкурс продавцов</a>
 						<p>Правление Облпотребсоюза и Обком профсоюза работников потребкооперации провели второй тур областного конкурса профессионального,  который проходил 23-24 августа, приняли кооперативные организации Облпотребсоюза.</p>
 					</section>
 					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image fit"><img src="images/thumb4.jpg" alt="" /></span>
 						<a href="#">Инструкция по исправлению карточек задвоенных контрагентов</a>
 						<p>В условиях рыночной экономики потребкооперация призвана стимулировать деловую активность сельских жителей, защищать их права и интересы, способствовать повышению благосостояния селян.</p>
 					</section>
@@ -191,20 +171,20 @@
 					<form method="post" action="#">
 					<div class="row uniform">
 						<div class="6u 12u$(xsmall)">
-							<input type="text" name="name" id="name" value="" placeholder="Name" />
+							<input type="text" name="name" id="name" value="" placeholder="Имя" />
 						</div>
 						<div class="6u$ 12u$(xsmall)">
-							<input type="email" name="email" id="email" value="" placeholder="Email" />
+							<input type="email" name="email" id="email" value="" placeholder="Обратная связь" />
 						</div>
 						<!-- Break -->
 						<div class="12u$">
-							<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+							<textarea name="message" id="message" placeholder="Ваше сообщение" rows="6"></textarea>
 						</div>
 						<!-- Break -->
 						<div class="12u$">
 							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-								<li><input type="reset" value="Reset" class="alt" /></li>
+								<li><a class="button-action button"><i class="fa fa-comment-o"></i> Отправить</a></li>
+								<li><input type="reset" value="Очистить" class="alt" /></li>
 							</ul>
 						</div>
 					</div>
@@ -214,33 +194,32 @@
 
 			</div>
 
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<div class="row double">
-						<div class="8u 12u$(medium)">
-							<h2>Оренбургский Облпотребсоюз</h2>
-						<p>За все годы деятельности потребительская кооперация области сформировалась в широко разветвленную сеть торговых, заготовительных и производственных предприятий, стала самостоятельной уникальной системой, которая осуществляет единый хозяйственный цикл</p>
-						</div>
-						<div class="contacts 4u$ 6u$(medium) 12u$(small)">
-							<h3>Контакты</h3>
-							<ul class="alt">
-								<li><i class="icn icon-pointer"></i><span>460000, г. Оренбург, ул. Ленинская, 26</span></li>
-								<li><i class="icn icon-call-out"></i><span>+7 3532 770935</span></li>
-								<li><i class="icn icon-envelope"></i><a href="mailto:ops@esoo.ru">ops@esoo.ru</a></p></li>
-							</ul>
-						</div>
+		<footer id="footer">
+			<div class="container">
+				<div class="row double">
+					<div class="8u 12u$(medium)">
+						<h2>Оренбургский Облпотребсоюз</h2>
+					<p>За все годы деятельности потребительская кооперация области сформировалась в широко разветвленную сеть торговых, заготовительных и производственных предприятий, стала самостоятельной уникальной системой, которая осуществляет единый хозяйственный цикл</p>
+					</div>
+					<div class="contacts 4u$ 6u$(medium) 12u$(small)">
+						<h3>Контакты</h3>
+						<ul class="alt">
+							<li><i class="icn icon-pointer"></i><span>460000, г. Оренбург, ул. Ленинская, 26</span></li>
+							<li><i class="icn icon-call-out"></i><span>+7 3532 770935</span></li>
+							<li><i class="icn icon-envelope"></i><a href="mailto:ops@esoo.ru">ops@esoo.ru</a></p></li>
+						</ul>
 					</div>
 				</div>
-				<div class="copyright">
-					&copy; Оренбургский Облпотребсоюз.
-				</div>
-			</footer>
+			</div>
+			<div class="copyright">
+				&copy; Оренбургский Облпотребсоюз.
+			</div>
+		</footer>
 
 		<script src="libs/jquery/dist/jquery.min.js"></script>
-		<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="libs/fakeloader/fakeLoader.min.js"></script>
 
+		<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="libs/skel/dist/skel.min.js"></script>
 		<script src="libs/skel-layers/dist/skel-layers.min.js"></script>
 
@@ -249,6 +228,17 @@
 		<script src="libs/waypoints/lib/jquery.waypoints.min.js"></script>
 
 		<script src="js/init.js"></script>
+
+        <script>
+/*            $(document).ready(function(){
+                $(".fakeLoader").fakeLoader({
+                    timeToHide:1200,
+                    bgColor:"#222",
+                    spinner:"spinner3",
+                    zIndex:"99999"
+                });
+            });*/
+        </script>
 
 	</body>
 </html>
