--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html>
 	<head>
 		<title>Облпотребсоюз</title>
+
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-touch-fullscreen" content="yes" />
+        <meta name="apple-mobile-web-app-title" content="Finch Moving Services">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+		<link rel="icon" type="image/png" href="images/favicon.png" />
+		<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
 		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="libs/animate.css/animate.min.css" />
@@ -29,176 +36,186 @@
 	<body id="top">
 	<div class="fakeLoader" id="fakeLoader"></div>
 
-			<header id="header" class="skel-layers-fixed">
-				<nav id="nav">
-					<ul>
-						<li><a href="#top">Главная</a></li>
-						<li><a href="#content">О нас</a></li>
-						<li><a href="#elements">Информация</a></li>
-						<li><a href="#grid">Ведомственная отчетность</a></li>
-						<li><a href="#grid">О наших предприятиях</a></li>
-						<li><a href="#grid">Фотогалерея</a></li>
-						<li><a href="#grid">Контакты</a></li>
+		<header id="header" class="skel-layers-fixed">
+			<nav id="nav">
+				<ul>
+					<li><a href="#top">Главная</a></li>
+					<li><a href="#content">О нас</a></li>
+					<li><a href="#elements">Информация</a></li>
+					<li><a href="#grid">Ведомственная отчетность</a></li>
+					<li><a href="#grid">О наших предприятиях</a></li>
+					<li><a href="#grid">Фотогалерея</a></li>
+					<li><a href="#grid">Контакты</a></li>
+					<li><a href="#slider" class="btn-up"><i class="icon-arrow-up"></i></a>
 <!-- 					<li><a href="http://getskel.com" class="button special">Download</a></li> -->
-					</ul>
-				</nav>
-			</header>
+				</ul>
+			</nav>
+		</header>
 
-			<section id="slider" class="header-top">
+		<section id="slider" class="header-top">
 
-				<div class="logo-wrapper">
-					<div class="logo">
-						<div class="logo-image wow fadeInDown" data-wow-duration="1.5s" data-wow-delay="1s">
-							<img src="images/logo.png">
-						</div>
-					<h2 class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">Облпотребсоюз</h2>
+			<div class="logo-wrapper">
+				<div class="logo">
+					<div class="logo-image wow fadeInDown" data-wow-duration="1.5s" data-wow-delay="1s">
+						<img src="images/logo.png">
 					</div>
+				<h2 class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">Облпотребсоюз</h2>
 				</div>
-				<div id="slider-header" class="carousel slide" data-ride="carousel">
-
-				  <ol class="carousel-indicators"></ol>
-
-				  <div class="carousel-inner" role="listbox">
-
-				    <div class="item active">
-				      <div class="dark-overlay"></div>
-				      <img src="images/slides/3.jpg" alt="...">
-				      <div class="carousel-caption">
-				      	<div class="caption">
-				      	<b>Современное производство</b>
-				      	<p>Наряду с развитием торгово-заготовительной деятельности потребкооперация оказывала большую помощь крестьянам по восстановлению и дельнейшему развитию сельскохозяйственного производства путем.</p>
-				      	</div>
-				      </div>
-				    </div>
-
-				    <div class="item">
-				      <div class="dark-overlay"></div>
-				      <img src="images/slides/2.jpg" alt="...">
-				      <div class="carousel-caption">
-				      	<div class="caption">
-				      	<b>Качественная продукция</b>
-				      	<p>В пятой пятилетке были четко определены задачи потребкооперации Оренбуржья по укреплению и расширению материально-технической базы торговли, увеличению товарооборота, объема закупок сельхозпродуктов и сырья.</p>
-				      	</div>
-				      </div>
-				    </div>
-
-
-				  </div>
-
-				  <a class="left carousel-control" href="#slider-header" role="button" data-slide="prev">
-				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				    <span class="sr-only">Previous</span>
-				  </a>
-				  <a class="right carousel-control" href="#slider-header" role="button" data-slide="next">
-				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				    <span class="sr-only">Next</span>
-				  </a>
-				</div>
-			</section>
-
-		<!-- Main -->
-			<div id="main" class="container">
-
-				<div class="row box-features">
-					<section class="2u 6u$(medium) 12u$(small)">
-						<i class="icon-basket"></i>
-						<span><b>162</b> розничных торговых предприятий</span>
-					</section>
-					<section class="2u 6u(medium) 12u$(small)">
-						<i class="icon-briefcase"></i>
-						<span><b>34</b> общества с ограниченной ответственностью</span>
-					</section>
-					<section class="2u 6u$(medium) 12u$(small)">
-						<i class="icon-settings"></i>
-						<span><b>11</b> производственных предприятий</span>
-					</section>
-					<section class="2u 6u$(medium) 12u$(small)">
-						<i class="icon-cup"></i>
-						<span><b>25</b> предприятий общественного питания</span>
-					</section>
-					<section class="2u 6u$(medium) 12u$(small)">
-						<i class="icon-users"></i>
-						<span><b>1232</b> работающих в системе облпотребсоюза</span>
-					</section>
-					<section class="2u 6u$(medium) 12u$(small)">
-						<i class="icon-handbag"></i>
-						<span><b>22</b> потребительских общества</span>
-					</section>
-				</div>
-
-				<hr class="major" />
-
-				<h2 class="section-title"><i class="icn lite-round icon-bulb"></i> Новости и обьявления</h2>
-
-				<div class="row box-news">
-					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb1.jpg" alt="" /></span>
-						<a href="#">Итоги работы кооператоров за отчетный год</a>
-						<p>5 марта 2015 года на базе Оренбургского потребительского общества состоялось Двадцать восьмое (90-е) общее отчетное собрание представителей потребительских обществ.</p>
-					</section>
-					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb2.jpg" alt="" /></span>
-						<a href="#">Сезон ярмарок стартовал</a>
-						<p>Численность обслуживаемого населения составляет свыше 300 тысяч человек, в том числе сельского 154 тысячи человек. Потребительская кооперация является крупным работодателем на селе: в ней работают более двух тысяч человек.</p>
-					</section>
-					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb3.jpg" alt="" /></span>
-						<a href="#">Cостоялся областной конкурс продавцов</a>
-						<p>Правление Облпотребсоюза и Обком профсоюза работников потребкооперации провели второй тур областного конкурса профессионального,  который проходил 23-24 августа, приняли кооперативные организации Облпотребсоюза.</p>
-					</section>
-					<section class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb4.jpg" alt="" /></span>
-						<a href="#">Инструкция по исправлению карточек задвоенных контрагентов</a>
-						<p>В условиях рыночной экономики потребкооперация призвана стимулировать деловую активность сельских жителей, защищать их права и интересы, способствовать повышению благосостояния селян.</p>
-					</section>
-				</div>
-
-				<hr class="major" />
-
-				<!-- Content -->
-				<div class="content">
-					<h2 id="content">Оренбургский Облпотребсоюз</h2>
-					<p>За все годы деятельности потребительская кооперация области сформировалась в широко разветвленную сеть торговых, заготовительных и производственных предприятий, стала самостоятельной уникальной системой, которая осуществляет единый хозяйственный цикл: заготовка сельхозпродукции, ее переработка в товары народного потребления и продажа.</p>
-				</div>
-				<hr class="major" />
-				<div class="box-form row">
-					<div class="4u">
-						<i class="icn icon-envelope-open"></i>
-						<h3>Задайте нам вопрос</h3>
-						<p>Численность обслуживаемого населения составляет свыше 300 тысяч человек, в том числе сельского 154 тысячи человек. Потребительская кооперация является крупным работодателем на селе: в ней работают более двух тысяч человек.</p>
-					</div>
-					<div class="8u">
-					<form method="post" action="#">
-					<div class="row uniform">
-						<div class="6u 12u$(xsmall)">
-							<input type="text" name="name" id="name" value="" placeholder="Имя" />
-						</div>
-						<div class="6u$ 12u$(xsmall)">
-							<input type="email" name="email" id="email" value="" placeholder="Обратная связь" />
-						</div>
-						<!-- Break -->
-						<div class="12u$">
-							<textarea name="message" id="message" placeholder="Ваше сообщение" rows="6"></textarea>
-						</div>
-						<!-- Break -->
-						<div class="12u$">
-							<ul class="actions">
-								<li><a class="button-action button"><i class="fa fa-comment-o"></i> Отправить</a></li>
-								<li><input type="reset" value="Очистить" class="alt" /></li>
-							</ul>
-						</div>
-					</div>
-				</form>
-					</div>
-				</div>
-
 			</div>
+			<div id="slider-header" class="carousel slide" data-ride="carousel">
+
+			  <ol class="carousel-indicators"></ol>
+
+			  <div class="carousel-inner" role="listbox">
+
+			    <div class="item active">
+			      <div class="dark-overlay"></div>
+			      <img src="images/slides/3.jpg" alt="...">
+			      <div class="carousel-caption">
+			      	<div class="caption">
+			      	<b>Современное производство</b>
+			      	<p>Наряду с развитием торгово-заготовительной деятельности потребкооперация оказывала большую помощь крестьянам по восстановлению и дельнейшему развитию сельскохозяйственного производства путем.</p>
+			      	</div>
+			      </div>
+			    </div>
+
+			    <div class="item">
+			      <div class="dark-overlay"></div>
+			      <img src="images/slides/2.jpg" alt="...">
+			      <div class="carousel-caption">
+			      	<div class="caption">
+			      	<b>Качественная продукция</b>
+			      	<p>В пятой пятилетке были четко определены задачи потребкооперации Оренбуржья по укреплению и расширению материально-технической базы торговли, увеличению товарооборота, объема закупок сельхозпродуктов и сырья.</p>
+			      	</div>
+			      </div>
+			    </div>
+
+
+			  </div>
+
+			  <a class="left carousel-control" href="#slider-header" role="button" data-slide="prev">
+			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="right carousel-control" href="#slider-header" role="button" data-slide="next">
+			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+		</section>
+
+	<!-- Main -->
+		<div id="main" class="container">
+
+			<div class="row box-features">
+				<section class="2u 6u$(medium) 12u$(small)">
+					<i class="icon-basket"></i>
+					<span><b>162</b> розничных торговых предприятий</span>
+				</section>
+				<section class="2u 6u(medium) 12u$(small)">
+					<i class="icon-briefcase"></i>
+					<span><b>34</b> общества с ограниченной ответственностью</span>
+				</section>
+				<section class="2u 6u$(medium) 12u$(small)">
+					<i class="icon-settings"></i>
+					<span><b>11</b> производственных предприятий</span>
+				</section>
+				<section class="2u 6u$(medium) 12u$(small)">
+					<i class="icon-cup"></i>
+					<span><b>25</b> предприятий общественного питания</span>
+				</section>
+				<section class="2u 6u$(medium) 12u$(small)">
+					<i class="icon-users"></i>
+					<span><b>1232</b> работающих в системе облпотребсоюза</span>
+				</section>
+				<section class="2u 6u$(medium) 12u$(small)">
+					<i class="icon-handbag"></i>
+					<span><b>22</b> потребительских общества</span>
+				</section>
+			</div>
+
+			<hr class="major" />
+
+			<div class="box-section">
+				<h2 class="section-title"><i class="icn lite-round icon-bulb"></i> Новости и обьявления</h2>
+				<div class="row box-news">
+					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+						<span class="image fit">
+							<img src="images/thumb1.jpg" alt="" />
+						</span>
+						<b>Итоги работы кооператоров за отчетный год</b>
+						<p>5 марта 2015 года на базе Оренбургского потребительского общества состоялось Двадцать восьмое (90-е) общее отчетное собрание представителей потребительских обществ.</p>
+					</a>
+					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+						<span class="image fit"><img src="images/thumb2.jpg" alt="" /></span>
+						<b>Сезон ярмарок стартовал</b>
+						<p>Численность обслуживаемого населения составляет свыше 300 тысяч человек, в том числе сельского 154 тысячи человек. Потребительская кооперация является крупным работодателем на селе: в ней работают более двух тысяч человек.</p>
+					</a>
+					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+						<span class="image fit"><img src="images/thumb3.jpg" alt="" /></span>
+						<b>Cостоялся областной конкурс продавцов</b>
+						<p>Правление Облпотребсоюза и Обком профсоюза работников потребкооперации провели второй тур областного конкурса профессионального,  который проходил 23-24 августа, приняли кооперативные организации Облпотребсоюза.</p>
+					</a>
+					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+						<span class="image fit"><img src="images/thumb4.jpg" alt="" /></span>
+						<b>Инструкция по исправлению карточек задвоенных контрагентов</b>
+						<p>В условиях рыночной экономики потребкооперация призвана стимулировать деловую активность сельских жителей, защищать их права и интересы, способствовать повышению благосостояния селян.</p>
+					</a>
+				</div>
+			</div>
+			<hr class="major" />
+
+			<!-- Content -->
+			<div class="content box-section">
+				<h2 class="section-title"><i class="icn lite-round icon-book-open"></i> История Оренбургского Облпотребсоюза</h2>
+				<h2 id="content"></h2>
+				<p>Оренбургский областной союз потребительских обществ создан в январе 1935 года и в него вошло 383 потребительских обществ.  В начале 30-х годов потребительская кооперация занимал в общем товарообороте области - 84%, государственная торговля около 9%, остальное приходилось на долю частной торговли, которая в последствие была вытеснена.</p>
+
+          		<p>Оренбургские кооператоры уделяли большое внимание культурно-просветительной работе среди широких масс трудового народа. На первых порах разъясняли цели и задачи кооперации на страницах периодической печати путём проведения бесед, лекций на кооперативные темы.</p>
+
+				<p>Проводя эту работу, кооператоры губернии стремились привлечь молодежь и женщин в работу потребительской кооперации. Деятельность направлялась на  создание библиотек, детских площадок, яслей, проведение курсов, лекций, спектаклей, вечеров отдыха, изб-читален, распространение газет, ликвидацию неграмотности среди пайщиков, подборку литературы по кооперативным вопросам, создание в магазинах уголков матери и младенчества, содержание коек в родильных домах, больницах для пайщиков, открытие акушерских, фельдшерских пунктов и т.д.</p>
+
+        		<p>Широко использовалось для этих целей радио и кино. По линии потребительской кооперации в селах Оренбуржья было оборудовано 35 радиоустановок, в том числе совместно с сельсоветами – 10, около 500 радиоточек.  До 1930г. вся сеть кинопередвижек и нескольких стационаров в губернии принадлежали потребительской кооперации.</p>
+			</div>
+
+			<hr class="major" />
+
+			<div class="box-section">
+				<h2 class="section-title"><i class="icn lite-round icon-bubble"></i> Задайте интересующий вас вопрос</h2>
+				<div class="box-form row">
+					<div class="12u">
+						<form method="post" action="#">
+						<div class="row uniform">
+							<div class="6u 12u$(xsmall)">
+								<input type="text" name="name" id="name" value="" placeholder="Имя" />
+							</div>
+							<div class="6u$ 12u$(xsmall)">
+								<input type="email" name="email" id="email" value="" placeholder="Обратная связь" />
+							</div>
+							<!-- Break -->
+							<div class="12u$">
+								<textarea name="message" id="message" placeholder="Ваше сообщение" rows="6"></textarea>
+							</div>
+							<!-- Break -->
+							<div class="12u$">
+								<ul class="actions">
+									<li><a class="button-action button"><i class="fa fa-comment-o"></i> Отправить</a></li>
+									<li><input type="reset" value="Очистить" class="alt" /></li>
+								</ul>
+							</div>
+						</div>
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</div> <!-- Main -->
 
 		<footer id="footer">
 			<div class="container">
 				<div class="row double">
 					<div class="8u 12u$(medium)">
-						<h2>Оренбургский Облпотребсоюз</h2>
+					<h2>Оренбургский Облпотребсоюз</h2>
 					<p>За все годы деятельности потребительская кооперация области сформировалась в широко разветвленную сеть торговых, заготовительных и производственных предприятий, стала самостоятельной уникальной системой, которая осуществляет единый хозяйственный цикл</p>
 					</div>
 					<div class="contacts 4u$ 6u$(medium) 12u$(small)">
