stable but not responsive

--- a/src/index.html
+++ b/src/index.html
@@ -247,14 +247,14 @@
 		<script src="js/init.js"></script>
 
         <script>
-/*            $(document).ready(function(){
+            $(document).ready(function(){
                 $(".fakeLoader").fakeLoader({
                     timeToHide:1200,
                     bgColor:"#222",
                     spinner:"spinner3",
                     zIndex:"99999"
                 });
-            });*/
+            });
         </script>
 
 	</body>
