--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
 		<title>Облпотребсоюз</title>
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-touch-fullscreen" content="yes" />
-        <meta name="apple-mobile-web-app-title" content="Finch Moving Services">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-touch-fullscreen" content="yes" />
+		<meta name="apple-mobile-web-app-title" content="Finch Moving Services">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
-		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="libs/animate.css/animate.min.css" />
 		<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="libs/simple-line-icons/simple-line-icons.css" />
@@ -136,28 +136,28 @@
 
 			<hr class="major" />
 
-			<div class="box-section">
+			<div class="box-section wow fadeInUp" data-wow-duration="0.8s">
 				<h2 class="section-title"><i class="icn lite-round icon-bulb"></i> Новости и обьявления</h2>
 				<div class="row box-news">
 					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
 						<span class="image fit">
-							<img src="images/thumb1.jpg" alt="" />
+							<img class="img-responsive" src="images/thumb1.jpg" alt="" />
 						</span>
 						<b>Итоги работы кооператоров за отчетный год</b>
 						<p>5 марта 2015 года на базе Оренбургского потребительского общества состоялось Двадцать восьмое (90-е) общее отчетное собрание представителей потребительских обществ.</p>
 					</a>
 					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb2.jpg" alt="" /></span>
+						<span class="image fit"><img class="img-responsive" src="images/thumb2.jpg" alt="" /></span>
 						<b>Сезон ярмарок стартовал</b>
 						<p>Численность обслуживаемого населения составляет свыше 300 тысяч человек, в том числе сельского 154 тысячи человек. Потребительская кооперация является крупным работодателем на селе: в ней работают более двух тысяч человек.</p>
 					</a>
 					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb3.jpg" alt="" /></span>
+						<span class="image fit"><img class="img-responsive" src="images/thumb3.jpg" alt="" /></span>
 						<b>Cостоялся областной конкурс продавцов</b>
 						<p>Правление Облпотребсоюза и Обком профсоюза работников потребкооперации провели второй тур областного конкурса профессионального,  который проходил 23-24 августа, приняли кооперативные организации Облпотребсоюза.</p>
 					</a>
 					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
-						<span class="image fit"><img src="images/thumb4.jpg" alt="" /></span>
+						<span class="image fit"><img class="img-responsive" src="images/thumb4.jpg" alt="" /></span>
 						<b>Инструкция по исправлению карточек задвоенных контрагентов</b>
 						<p>В условиях рыночной экономики потребкооперация призвана стимулировать деловую активность сельских жителей, защищать их права и интересы, способствовать повышению благосостояния селян.</p>
 					</a>
@@ -166,7 +166,7 @@
 			<hr class="major" />
 
 			<!-- Content -->
-			<div class="content box-section">
+			<div class="content box-section wow fadeInUp" data-wow-duration="0.8s">
 				<h2 class="section-title"><i class="icn lite-round icon-book-open"></i> История Оренбургского Облпотребсоюза</h2>
 				<h2 id="content"></h2>
 				<p>Оренбургский областной союз потребительских обществ создан в январе 1935 года и в него вошло 383 потребительских обществ.  В начале 30-х годов потребительская кооперация занимал в общем товарообороте области - 84%, государственная торговля около 9%, остальное приходилось на долю частной торговли, которая в последствие была вытеснена.</p>
@@ -180,7 +180,7 @@
 
 			<hr class="major" />
 
-			<div class="box-section">
+			<div class="box-section wow fadeInUp" data-wow-duration="0.8s">
 				<h2 class="section-title"><i class="icn lite-round icon-bubble"></i> Задайте интересующий вас вопрос</h2>
 				<div class="box-form row">
 					<div class="12u">
@@ -236,7 +236,7 @@
 		<script src="libs/jquery/dist/jquery.min.js"></script>
 		<script src="libs/fakeloader/fakeLoader.min.js"></script>
 
-		<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="libs/skel/dist/skel.min.js"></script>
 		<script src="libs/skel-layers/dist/skel-layers.min.js"></script>
 
