--- a/src/index.html
+++ b/src/index.html
@@ -108,27 +108,27 @@
 		<div id="main" class="container">
 
 			<div class="row box-features">
-				<section class="2u 6u$(medium) 12u$(small)">
+				<section class="2u 12u$(small)">
 					<i class="icon-basket"></i>
 					<span><b>162</b> розничных торговых предприятий</span>
 				</section>
-				<section class="2u 6u(medium) 12u$(small)">
+				<section class="2u 12u$(small)">
 					<i class="icon-briefcase"></i>
 					<span><b>34</b> общества с ограниченной ответственностью</span>
 				</section>
-				<section class="2u 6u$(medium) 12u$(small)">
+				<section class="2u 12u$(small)">
 					<i class="icon-settings"></i>
 					<span><b>11</b> производственных предприятий</span>
 				</section>
-				<section class="2u 6u$(medium) 12u$(small)">
+				<section class="2u 12u$(small)">
 					<i class="icon-cup"></i>
 					<span><b>25</b> предприятий общественного питания</span>
 				</section>
-				<section class="2u 6u$(medium) 12u$(small)">
+				<section class="2u 12u$(small)">
 					<i class="icon-users"></i>
 					<span><b>1232</b> работающих в системе облпотребсоюза</span>
 				</section>
-				<section class="2u 6u$(medium) 12u$(small)">
+				<section class="2u 12u$(small)">
 					<i class="icon-handbag"></i>
 					<span><b>22</b> потребительских общества</span>
 				</section>
@@ -139,24 +139,24 @@
 			<div class="box-section wow fadeInUp" data-wow-duration="0.8s">
 				<h2 class="section-title"><i class="icn lite-round icon-bulb"></i> Новости и обьявления</h2>
 				<div class="row box-news">
-					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+					<a href="#" class="news-item 3u 12u$(small)">
 						<span class="image fit">
 							<img class="img-responsive" src="images/thumb1.jpg" alt="" />
 						</span>
 						<b>Итоги работы кооператоров за отчетный год</b>
 						<p>5 марта 2015 года на базе Оренбургского потребительского общества состоялось Двадцать восьмое (90-е) общее отчетное собрание представителей потребительских обществ.</p>
 					</a>
-					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+					<a href="#" class="news-item 3u 12u$(small)">
 						<span class="image fit"><img class="img-responsive" src="images/thumb2.jpg" alt="" /></span>
 						<b>Сезон ярмарок стартовал</b>
 						<p>Численность обслуживаемого населения составляет свыше 300 тысяч человек, в том числе сельского 154 тысячи человек. Потребительская кооперация является крупным работодателем на селе: в ней работают более двух тысяч человек.</p>
 					</a>
-					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+					<a href="#" class="news-item 3u 12u$(small)">
 						<span class="image fit"><img class="img-responsive" src="images/thumb3.jpg" alt="" /></span>
 						<b>Cостоялся областной конкурс продавцов</b>
 						<p>Правление Облпотребсоюза и Обком профсоюза работников потребкооперации провели второй тур областного конкурса профессионального,  который проходил 23-24 августа, приняли кооперативные организации Облпотребсоюза.</p>
 					</a>
-					<a href="#" class="news-item 3u 6u$(medium) 12u$(small)">
+					<a href="#" class="news-item 3u 12u$(small)">
 						<span class="image fit"><img class="img-responsive" src="images/thumb4.jpg" alt="" /></span>
 						<b>Инструкция по исправлению карточек задвоенных контрагентов</b>
 						<p>В условиях рыночной экономики потребкооперация призвана стимулировать деловую активность сельских жителей, защищать их права и интересы, способствовать повышению благосостояния селян.</p>
